Fix Java 8 key validation compatibility in S3Controller